homelab-gitops/apps/media/base/navidrome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: media
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - navidrome.thundertest.org
      secretName: mealie-tls
  rules:
    - host: navidrome.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome
                port:
                  number: 80
